--- a/style.css
+++ b/style.css
@@ -11,25 +11,25 @@
 }
 
 #first-section{
-    background-image: url('https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80');
+    background-image: url('/images/first.jpeg');
     background-position: center;
     background-size: cover;
     width: 100%;
 }
 #second-section{
-    background-image: url('https://images.unsplash.com/photo-1571162362234-0a92e908cca9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');
+    background-image: url('/images/second.jpeg');
     background-position: center;
     background-size: cover;
     width: 100%;
 }
 #third-section{
-    background-image: url('https://images.unsplash.com/photo-1571162368502-3c786d9a1371?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');
+    background-image: url('/images/third.jpeg');
     background-position: center;
     background-size: cover;
     width: 100%;
 }
 #fourth-section{
-    background-image: url('https://images.unsplash.com/photo-1452711932549-e7ea7f129399?ixlib=rb-1.2.1&auto=format&fit=crop&w=1039&q=80');
+    background-image: url('/images/fourth.jpeg');
     background-position: center;
     background-size: cover;
     width: 100%;
